--- a/src/Busybee/PersonBundle/Resources/views/People/importMatch.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/People/importMatch.html.twig
@@ -4,7 +4,7 @@
 
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
-{% block title %}{{ parent() }}{{ 'people.matchimport.title'|trans }}{% endblock title %}
+{% block title %}{{ 'people.matchimport.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'people.matchimport.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'people.matchimport.description'|trans }}{% endblock headerLead %}
 
