--- a/src/Busybee/PersonBundle/Resources/views/People/import.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/People/import.html.twig
@@ -26,6 +26,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
+    {% include 'BusybeeHomeBundle:Scripts:fadeAlert.html.twig' %}
 {% endblock javascripts %}
 
