--- a/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
@@ -213,5 +213,5 @@
 			alert("{{ 'misc.password1.copy'|trans }}" + "\n\n" + "{{ config.misc.password.text|raw }}") ;
 		});
 	</script>
-    {% include '@BusybeeHome/Scripts/fadeAlert.js.twig' %}
+    {% include '@BusybeeHome/Scripts/fadeAlert.html.twig' %}
 {% endblock javascripts %}
