--- a/src/Busybee/SystemBundle/Resources/views/Setting/upload.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Setting/upload.html.twig
@@ -37,7 +37,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% include '@BusybeeHome/Scripts/fadeAlert.js.twig' %}
+    {% include '@BusybeeHome/Scripts/fadeAlert.html.twig' %}
     {% include '@BusybeeHome/Toggle/script.html.twig' %}
 {% endblock %}
 
