--- a/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
@@ -15,5 +15,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% include '@BusybeeHome/Scripts/fadeAlert.js.twig' %}
+    {% include '@BusybeeHome/Scripts/fadeAlert.html.twig' %}
 {% endblock %}
