--- a/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
@@ -62,9 +62,9 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
-    {% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
+    {% include 'BusybeeHomeBundle:Scripts:fadeAlert.html.twig' %}
     {% include "BusybeeFormBundle:Scripts:jquery.collection.js.html.twig" %}
     {% include 'BusybeeFamilyBundle:Family:script.html.twig' %}
-    {% include 'BusybeeHomeBundle:Scripts:monitorForm.js.twig' with {'route': 'family_manage'} %}
+    {% include 'BusybeeHomeBundle:Scripts:monitorForm.html.twig' with {'route': 'family_manage'} %}
     {% include 'BusybeeHomeBundle:Toggle:script.html.twig' %}
 {% endblock javascripts %}
