--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendar.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendar.html.twig
@@ -18,7 +18,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {% include '@BusybeeHome/Scripts/jquery.js.twig' %}
+    {% include '@BusybeeHome/Scripts/jquery.html.twig' %}
 {% endblock stylesheets %}
 
 {% set tabs = get_parameter('calendar') %}
