--- a/src/Busybee/SecurityBundle/Resources/views/Page/edit.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/Page/edit.html.twig
@@ -43,6 +43,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
+    {% include 'BusybeeHomeBundle:Scripts:fadeAlert.html.twig' %}
 {% endblock javascripts %}
 
