--- a/src/Busybee/HomeBundle/Resources/views/Default/style.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/style.html.twig
@@ -1,6 +1,7 @@
 	<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/bootstrap-theme.min.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/bootstrap-submenu.min.css') }}" type="text/css" rel="stylesheet" />
+	<link href="{{ asset('css/jquery-ui.min.css') }}" type="text/css" rel="stylesheet"/>
 	<link href="{{ asset('css/glyphicons.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/glyphicons-halflings.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/main.css') }}" type="text/css" rel="stylesheet" />
