--- a/src/Busybee/FamilyBundle/Resources/views/Family/details.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/details.html.twig
@@ -15,7 +15,7 @@
                     {{ form_row(form.name) }}
                 </div>
                 <div class="well col-sm-6">
-
+                    {{ form_row(form.house) }}
                 </div>
             </div>
             <div class="row">
