--- a/src/Busybee/StaffBundle/Resources/views/Person/staff.html.twig
+++ b/src/Busybee/StaffBundle/Resources/views/Person/staff.html.twig
@@ -17,6 +17,13 @@
                     {{ form_row(form.staff.jobTitle) }}
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-6 well">
+                    {{ form_row(form.staff.house) }}
+                </div>
+                <div class="col-sm-6">
+                </div>
+            </div>
         </div>
     </div>
 </div>
