--- a/src/Busybee/StudentBundle/Resources/views/Person/student.html.twig
+++ b/src/Busybee/StudentBundle/Resources/views/Person/student.html.twig
@@ -27,7 +27,8 @@
                 <div class="col-sm-4 well">
                     {{ form_row(form.student.countryOfBirth) }}
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 well">
+                    {{ form_row(form.student.house) }}
                 </div>
             </div>
             <div class="row">
