--- a/src/Busybee/HomeBundle/Resources/views/Default/scripts.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/scripts.html.twig
@@ -13,8 +13,8 @@
             dialogTimeRemaining: '{{ 'idletimeout.timeRemaining'|trans({}, 'BusybeeHomeBundle') }}',
             dialogStayLoggedInButton: '{{ 'idletimeout.stay'|trans({}, 'BusybeeHomeBundle') }}',
             dialogLogOutNowButton: '{{ 'idletimeout.signout'|trans({}, 'BusybeeHomeBundle') }}',
-            idleTimeLimit: 15, //{{ get_setting('idleTimeout', 15) * 60 - 60 }},
-            dialogDisplayLimit: 5, //60,
+            idleTimeLimit: {{ get_setting('idleTimeout', 15) * 60 - 60 }},
+            dialogDisplayLimit: 60,
             activityEvents: 'click keypress scroll wheel mousewheel',
             sessionKeepAliveTimer: false,
             dialogTitle: '{{ 'idletimeout.title'|trans({}, 'BusybeeHomeBundle') }}',
