--- a/src/Busybee/FamilyBundle/Resources/views/Family/panelHeader.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/panelHeader.html.twig
@@ -19,7 +19,7 @@
                     onClick="window.open('{{ path('family_edit', {'id': 'Add', 'currentSearch': currentSearch}) }}','_self')"
                     style="float: right"></button>
         {% endif %}
-        {{ resetButton()|raw }}
+        {{ resetButton({'type': 'button', 'windowOpen': {'route': path('family_edit', {'id': app.request.get('id'), 'currentSearch': currentSearch})}})|raw }}
         <button title='{{ 'form.save'|trans({}, 'BusybeeHomeBundle') }}' type="submit"
                 class="halflings halflings-save btn btn-success" style="float: right"></button>
     </h3>
