--- a/src/Busybee/InstituteBundle/Resources/views/Campus/resourceEdit.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Campus/resourceEdit.html.twig
@@ -17,7 +17,7 @@
 {{ form_start(form) }}
     {% set h3Content = returnButton({'windowOpen': {'route': path('campus_resource_manage')}}) %}
     {% if app.request.attributes.get('id') != 'Add' %}{% set h3Content = h3Content ~ addButton({'windowOpen': {'route': path('campus_resource_edit', {'id': 'Add'})}}) %}{% endif %}
-    {% set h3Content = h3Content ~ resetButton() %}
+    {% set h3Content = h3Content ~ resetButton({'type': 'button', 'windowOpen': {'route': path('campus_resource_edit', {'id': app.request.get('id')}) }}) %}
     {% set h3Content = h3Content ~ saveButton() %}
     {% set h3Content = h3Content ~ form_widget(form.changeRecord, {'value': app.request.attributes.get('id')}) %}
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'campus.resource.title', 'transDomain': 'BusybeeInstituteBundle'} %}
