--- a/src/Busybee/InstituteBundle/Resources/views/HomeRoom/edit.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/HomeRoom/edit.html.twig
@@ -17,7 +17,7 @@
     {{ form_start(form, {'attr': {'id': 'homeroom'}}) }}
     {% set h3Content = returnButton({'windowOpen': {'route': path('home_room_manage')}}) %}
     {% if app.request.attributes.get('id') != 'Add' %}{% set h3Content = h3Content ~ addButton({'windowOpen': {'route': path('home_room_edit', {'id': 'Add'})}}) %}{% endif %}
-    {% set h3Content = h3Content ~ resetButton() %}
+    {% set h3Content = h3Content ~ resetButton({'type': 'button', 'windowOpen': {'route': path('home_room_edit', {'id': app.request.get('id')}) } }) %}
     {% set h3Content = h3Content ~ saveButton() %}
     {% set h3Content = h3Content ~ form_widget(form.changeRecord, {'value': app.request.attributes.get('id')}) %}
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'homeroom.edit.title', 'transDomain': 'BusybeeInstituteBundle'} %}
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 {{ form_end(form) }}
 {% endblock contentContainer %}
 
