--- a/src/Busybee/EnrolmentBundle/Resources/views/HomeRoom/index.html.twig
+++ b/src/Busybee/EnrolmentBundle/Resources/views/HomeRoom/index.html.twig
@@ -1,6 +1,6 @@
-{# src/Busybee/InstituteBundle/Resources/views/Campus/resources.html.twig #}
+{# src/Busybee/EnrolmentBundle/Resources/views/Campus/resources.html.twig #}
 
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeEnrolmentBundle" %}
 
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
@@ -10,8 +10,8 @@
 
 {% block contentContainer %}
     {% include 'PaginationBundle:Default:index.html.twig' %}
-    {% set h3Content = addButton({'title': 'homeroom.add.title', 'transDomain': 'BusybeeInstituteBundle', 'windowOpen': {'route': path('home_room_edit', {'id': 'Add'})}}) %}
-    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'homeroom.title', 'transDomain': 'BusybeeInstituteBundle'} %}
+    {% set h3Content = addButton({'title': 'homeroom.add.title', 'transDomain': 'BusybeeEnrolmentBundle', 'windowOpen': {'route': path('home_room_edit', {'id': 'Add'})}}) %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'homeroom.title', 'transDomain': 'BusybeeEnrolmentBundle'} %}
     <div class="container-fluid well">
         <div class="row row-header">
             <div class="col-sm-3 col-md-3" style="display: inline-block;">
