--- a/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
@@ -35,7 +35,8 @@
             {% if name == 'staff' and form.staff.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
             {% if name == 'student' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
             {% if name == 'user' and form.user.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
-			<li{{ disabled }}><a href="#{{ name }}" role="tab" data-toggle="tab">{{ tab.label|trans({}, translation) }}</a></li>
+            <li{{ disabled }} role="presentation"><a href="#{{ name }}" role="tab"
+                                                     data-toggle="tab">{{ tab.label|trans({}, translation) }}</a></li>
 		{% endfor %}
 	</ul>
 	{% set active = ' active' %}
